--- a/tableorder/src/components/Modal/ItemCart/ItemCartStyle.css
+++ b/tableorder/src/components/Modal/ItemCart/ItemCartStyle.css
@@ -19,7 +19,8 @@
   justify-content: space-between;
   background-color: #4d4d4d;
   transition: all 0.3s linear;
-  padding: 0 0.25rem;
+  /* padding: 0 0.25rem; */
+  padding: 0.25rem;
 }
 .cart-title {
   flex: 0 0 80px;
@@ -35,22 +36,26 @@
   color: yellow;
 }
 
+/* 스크롤 너비 */
 .cart-items-container::-webkit-scrollbar {
-  width: 8px; /* 스크롤 너비 */
+  width: 8px;
 }
 
+/* 스크롤 트랙 배경 */
 .cart-items-container::-webkit-scrollbar-track {
-  background: #f1f1f1; /* 스크롤 트랙 배경 */
+  background: #f1f1f1;
   border-radius: 10px;
 }
 
+/* 스크롤 thumb 색 */
 .cart-items-container::-webkit-scrollbar-thumb {
-  background: #888; /* 스크롤 thumb 색 */
+  background: #888;
   border-radius: 10px;
 }
 
+/* 스크롤 thumb hover 시 색 */
 .cart-items-container::-webkit-scrollbar-thumb:hover {
-  background: #555; /* 스크롤 thumb hover 시 색 */
+  background: #555;
 }
 
 .cart-items-container {
@@ -60,22 +65,20 @@
   grid-auto-rows: 120px;
   overflow: auto;
   background-color: #fafafa;
-  padding-right: 0.125rem;
   padding: 0.3rem;
 }
 
 .cart-item-total {
   flex: 0 0 60px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 0 1.2rem;
   background-color: #fafafa;
   border-top: 1px solid #888;
 }
 .cart-item-total-quantity,
 .cart-item-total-price {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: bold;
   color: #000;
 }
@@ -85,6 +88,8 @@
   justify-content: center;
   align-items: center;
   background-color: #000;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
   overflow: hidden;
 }
 .cart-btns span {
@@ -98,7 +103,7 @@
   align-items: center;
   background-color: transparent;
   border-color: transparent;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: bold;
   color: #000;
   cursor: pointer;
@@ -118,39 +123,40 @@
 .cart-left .icon,
 .cart-right .icon {
   margin-right: 8px;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1;
 }
 
 .cart-left:hover {
   background-color: #757575;
-  color: #fff;
+  /* color: #fff; */
+  color: #000;
 }
 .cart-right:hover {
   background-color: #fbc02d;
-  color: #fff;
+  /* color: #fff; */
+  color: #000;
 }
 
 @media screen and (max-width: 479px) {
   .cart-container {
-    width: 80%;
-    padding: 0;
+    /* width: 80%; */
+    width: 70%;
   }
   .cart-title {
     flex: 0 0 90px;
     padding: 1rem;
-    margin: 0.25rem;
+  }
+  .cart-title h2 {
     font-size: 1.4rem;
   }
   .cart-items-container {
     grid-auto-rows: 100px;
-    margin: 0 0.25rem;
     padding: 0.25rem;
   }
   .cart-item-total {
     flex: 0 0 50px;
-    padding: 0 1rem;
-    margin: 0.25rem 0.25rem 0;
+    /* padding: 0 1rem; */
   }
   .cart-item-total-quantity,
   .cart-item-total-price {
@@ -158,7 +164,6 @@
   }
   .cart-btns {
     flex: 0 0 50px;
-    margin: 0 0.25rem 0.25rem;
   }
   .cart-left,
   .cart-right {
@@ -171,215 +176,210 @@
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .cart-container {
+    /* width: 60%; */
+    /* width: 70%; */
     width: 60%;
-    padding: 0;
+    max-width: 350px;
   }
   .cart-title {
     flex: 0 0 90px;
     padding: 1rem;
-    margin: 0.25rem;
+  }
+  .cart-title h2 {
     font-size: 1.4rem;
+    font-size: 1.45rem;
   }
   .cart-items-container {
     grid-auto-rows: 110px;
-    margin: 0 0.25rem;
     padding: 0.25rem;
   }
   .cart-item-total {
     flex: 0 0 50px;
-    padding: 0 1.2rem;
-    margin: 0.25rem 0.25rem 0;
+    /* padding: 0 1rem; */
   }
 
   .cart-item-total-quantity,
   .cart-item-total-price {
     font-size: 1.2rem;
+    font-size: 1.1rem;
+    font-size: 1.15rem;
   }
   .cart-btns {
     flex: 0 0 50px;
-    margin: 0 0.25rem 0.25rem;
   }
   .cart-left,
   .cart-right {
     font-size: 1.1rem;
+    font-size: 1rem;
+    font-size: 1.05rem;
   }
   .cart-left .icon,
   .cart-right .icon {
     font-size: 1.1rem;
+    font-size: 1rem;
+    font-size: 1.05rem;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cart-container {
-    width: 45%;
-    padding: 0;
+    /* width: 55%; */
+    /**/
+    /* width: 40%; */
+    width: 50%;
+    max-width: 400px;
   }
   .cart-title {
     flex: 0 0 80px;
-    /* padding: 1rem; */
-    padding-left: 1rem;
-    /* margin: 0.25rem; */
-    /* margin: 0.2rem; */
-    margin: 0.175rem;
-    margin-bottom: 0.125rem;
-    /* margin: 0.125rem; */
-    /* margin: 0.15rem; */
-    /* border: 1px solid red; */
+    /* padding-left: 1rem; */
+    padding: 1rem;
+    padding: 1.1rem;
   }
   .cart-title h2 {
     font-size: 1.5rem;
   }
   .cart-items-container {
     grid-auto-rows: 120px;
-    margin: 0 0.2rem;
     padding: 0.3rem;
   }
   .cart-item-total {
     flex: 0 0 60px;
-    padding: 0 1.2rem;
-    margin: 0.125rem 0.2rem 0;
+    /* padding: 0 1.2rem; */
+    /* padding: 0 1rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
     font-size: 1.3rem;
+    font-size: 1.2rem;
   }
   .cart-btns {
     flex: 0 0 60px;
-    /* margin: 0 0.25rem 0.25rem; */
-    margin: 0 0.2rem 0.2rem;
   }
   .cart-left,
   .cart-right {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
   .cart-left .icon,
   .cart-right .icon {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cart-container {
+    /* width: 50%; */
+    /**/
+    /* width: 40%; */
     width: 45%;
-    padding: 0;
+    max-width: 450px;
   }
   .cart-title {
     flex: 0 0 90px;
-    padding-left: 1rem;
-    margin: 0.2rem;
-    margin-bottom: 0.125rem;
+    /* padding-left: 1rem; */
+    padding: 1rem;
   }
   .cart-title h2 {
     font-size: 1.6rem;
   }
   .cart-items-container {
     grid-auto-rows: 130px;
-    margin: 0 0.2rem;
     padding: 0.3rem;
   }
   .cart-item-total {
     flex: 0 0 65px;
-    padding: 0 1.2rem;
-    margin: 0.125rem 0.2rem 0;
+    /* padding: 0 1.2rem; */
+    /* padding: 0 1rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
   .cart-btns {
     flex: 0 0 65px;
-    margin: 0 0.2rem 0.2rem;
   }
   .cart-left,
   .cart-right {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
   .cart-left .icon,
   .cart-right .icon {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .cart-container {
+    width: 45%;
+    /**/
     width: 40%;
-    padding: 0;
+    max-width: 500px;
   }
   .cart-title {
     flex: 0 0 100px;
-    padding-left: 1rem;
-    margin: 0.25rem;
-    margin-bottom: 0.15rem;
+    padding: 1rem;
   }
   .cart-title h2 {
     font-size: 1.7rem;
   }
   .cart-items-container {
     grid-auto-rows: 140px;
-    margin: 0 0.25rem;
-    padding: 0.35rem;
+    padding: 0.325rem;
   }
   .cart-item-total {
     flex: 0 0 70px;
-    padding: 0 1.2rem;
-    margin: 0.15rem 0.25rem 0;
+    /* padding: 0 1.2rem; */
+    /* padding: 0 1rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
   .cart-btns {
     flex: 0 0 70px;
-    /* margin: 0 0.2rem 0.2rem; */
-    margin: 0 0.25rem 0.25rem;
   }
   .cart-left,
   .cart-right {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
   .cart-left .icon,
   .cart-right .icon {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 }
 @media screen and (min-width: 1440px) {
   .cart-container {
     width: 40%;
-    padding: 0;
+    max-width: 500px;
   }
   .cart-title {
     flex: 0 0 110px;
-    padding-left: 1rem;
-    margin: 0.25rem;
-    margin-bottom: 0.15rem;
+    padding: 1rem;
   }
   .cart-title h2 {
     font-size: 1.8rem;
   }
   .cart-items-container {
     grid-auto-rows: 150px;
-    margin: 0 0.25rem;
     padding: 0.35rem;
   }
   .cart-item-total {
     flex: 0 0 75px;
-    padding: 0 1.2rem;
-    margin: 0.15rem 0.25rem 0;
+    /* padding: 0 1.2rem; */
+    /* padding: 0 2rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
   .cart-btns {
     flex: 0 0 75px;
-    margin: 0 0.25rem 0.25rem;
   }
   .cart-left,
   .cart-right {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
   .cart-left .icon,
   .cart-right .icon {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
