--- a/tableorder/src/components/Modal/ModalItems/OptionItemStyle.css
+++ b/tableorder/src/components/Modal/ModalItems/OptionItemStyle.css
@@ -2,134 +2,171 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 0.125rem;
+  background-color: #fefefe;
 }
+
 .modal-item-details {
   flex: 1;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  /* grid-template-columns: repeat(5, 1fr); */
+  /* grid-template-rows: repeat(6, 1fr); */
+  /*10일때*/
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
   gap: 0.25rem;
-  padding: 0.2rem;
+  padding: 0.25rem;
   overflow: hidden;
-  margin-bottom: 0.25rem;
-  background-color: #fafafa;
+  /* border: 1px solid blue; */
 }
-
 .modal-menuItem {
   grid-column: 1 / 3;
-  grid-row: 1 / 6;
+  grid-row: 1 / 4;
+  /* grid-row: 1 / 3; */
+  /**/
+  grid-column: 1 / 5;
+  /* grid-row: 1 / 6; */
+  grid-row: 1 / 5;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 0.25rem;
   background-color: #b0b0b0;
+  border-radius: 0.25rem;
+  /* border: 1px solid red; */
 }
-.modal-menuItem img {
+.single-img {
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
 }
 .modal-info {
   grid-column: 3 / 6;
-  grid-row: 1 / 3;
+  grid-row: 1 / 4;
+  /* grid-row: 1 / 3; */
+  /*10*/
+  grid-column: 5 / 11;
+  /* grid-row: 1 / 6; */
+  grid-row: 1 / 5;
   display: flex;
-  justify-content: space-between;
-  border-radius: 0.25rem;
-  margin: 0 0.25rem;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  flex-direction: column;
+  justify-content: center;
+  align-content: space-between;
+  /* border: 1px solid rgba(255, 255, 255, 0.5); */
   overflow: hidden;
+  overflow: auto;
+  padding: 0.25rem;
+  /* border: 1px solid yellow; */
 }
 .modal-item-title {
+  flex: 1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.3rem;
+  padding: 0.2rem;
+  margin-bottom: 0.25rem;
+  /* border: 1px solid red; */
 }
 .modal-item-title h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.25rem;
+  /* margin-bottom: 0.25rem; */
+  padding: 0.2rem;
   font-size: 1.3rem;
   color: #000;
-  /* line-height: 1; */
+  /* border: 1px solid red; */
 }
 .modal-item-title span {
-  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0.2rem;
-  font-size: 1.125rem;
-  line-height: 1;
+  font-size: 1rem;
+  font-weight: bold;
   color: #000;
+  text-transform: uppercase;
 }
 .drink-type {
-  /* flex: 0 1 40%; */
+  /* flex: 0 0 30%; */
+  /* flex: 0 0 50%; */
+  flex: 0 0 40%;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* border: 1px solid blue; */
+}
+.hot-type,
+.iced-type {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem;
-  overflow: hidden;
-}
-
-.drink-type .hot-type,
-.drink-type .iced-type {
-  /* margin: 0.75rem; */
-  /* padding: 0.35rem 1rem; */
-  margin: 0 1rem;
-  padding: 0.45rem 1rem;
-  /* width: auto; */
-  width: 100%;
-  height: auto;
+  padding: 0.3rem 1rem;
   background-color: transparent;
   border-color: transparent;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: 0.05rem;
   border-radius: 0.5rem;
-  color: #b0b0b0;
-  font-weight: bold;
   font-size: 1rem;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
   cursor: pointer;
-  line-height: 1;
-  border: 1px solid rgb(176, 176, 176);
+  /* border: 1px solid red; */
 }
 
 .hot-type:hover,
 .iced-type:hover {
+  color: #b0b0b0;
+  /* border: 1px solid rgb(176, 176, 176); */
+  /**/
   color: #000;
-  border: 1px solid rgba(0, 0, 0, 0.5);
 }
-
-.active-hot.hot-type {
-  color: #000;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
+.active-hot.hot-type,
 .active-iced.iced-type {
+  color: #b0b0b0;
+  /* border: 1px solid rgb(176, 176, 176); */
+  /**/
   color: #000;
-  border: 1px solid rgba(0, 0, 0, 0.8);
 }
 
+/*선택옵션*/
 .selected-items-info {
-  grid-column: 3 / 6;
-  grid-row: 3 / 6;
-  overflow: auto;
-  border-radius: 0.25rem;
+  grid-column: 1 / 11;
+  grid-row: 4 / 7;
+  /* grid-row: 3 / 7; */
+
+  /*10일때*/
+  /* grid-row: 6 / 11; */
+  grid-row: 5 / 11;
+  padding: 0.2rem;
   border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 0.25rem;
+  overflow: auto;
+  /* border: 1px solid yellow; */
+  /* border: 1px solid red; */
+  /* margin: 0.25rem 0; */
 }
+.drink-type-warning {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem;
+  font-weight: bold;
+  /* margin-top: 1rem; */
+  /* border: 1px solid blue; */
+}
+
 .items-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0;
-  margin: 0.125rem 0.2rem;
+  /* padding: 0.15rem; */
+  padding: 0.25rem;
+  margin: 0 0.25rem;
+  /* border: 1px solid green; */
 }
-
 .size-selection-row,
 .quantity-selection-row,
 .coffee-row {
@@ -138,41 +175,45 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.2rem;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.25rem;
+  padding: 0.25rem;
   font-weight: bold;
-
-  border-bottom: 1px solid rgba(176, 176, 176, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.9);
 }
 .size-selection-row h4,
-.quantity-selection-row h4,
-.coffee-row h4 {
+.quantity-selection-row h4 {
+  margin-bottom: 0.25rem;
+  padding: 0.25rem;
   font-size: 1.15rem;
-  margin: 0.3rem 0;
-  padding: 0.3rem;
   color: #000;
-  line-height: 1;
+  /* border: 1px solid blue; */
 }
 .btn-row {
   width: 100%;
-  padding: 0.2rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding: 0.25rem;
+  /* padding: 0.1rem; */
+  /* border: 1px solid blue; */
 }
 .btn-row .coffee-size {
   flex: 1;
-  margin: 0 0.2rem;
-  padding: 0.2rem 0.35rem;
+  padding: 0.25rem;
   background-color: transparent;
   border-color: transparent;
-  color: #b0b0b0;
-  font-size: 1.05rem;
+  font-size: 1rem;
   font-weight: bold;
+  border-radius: 0.25rem;
+  color: rgba(0, 0, 0, 0.5);
   text-transform: capitalize;
   cursor: pointer;
 }
-.btn-row .active-size {
+.btn-row .active-size,
+.coffee-size:hover {
+  color: #b0b0b0;
+
+  /**/
   color: #000;
 }
 .btn-row .minus,
@@ -180,166 +221,364 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.1rem;
-  font-size: 1.1rem;
+  padding: 0.25rem;
   background-color: transparent;
   border-color: transparent;
-  color: #000;
+  font-size: 1rem;
   font-weight: bold;
+  color: #000;
   cursor: pointer;
   /* border: 1px solid red; */
 }
+
 .btn-row span {
+  width: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.1rem;
+  /* padding: 0 0.25rem; */
+  padding: 0.25rem;
+  font-size: 1rem;
   color: #000;
-  line-height: 1;
+  /* border: 1px solid red; */
 }
-
 .coffee-row-header {
   display: flex;
   justify-content: center;
   align-items: center;
-  line-height: 1;
-}
+  margin-bottom: 0.25rem;
+  padding: 0.25rem;
 
+  /* border: 1px solid purple; */
+}
+.coffee-row-header h4 {
+  padding: 0.25rem;
+  font-size: 1.15rem;
+  color: #000;
+  /* border: 1px solid red; */
+}
 .coffee-row-header p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0.25rem 0;
-  padding: 0.25rem;
-  font-size: 0.925rem;
-  color: #000;
-}
 
+  font-size: 1rem;
+  padding: 0.25rem;
+  /* border: 1px solid red; */
+}
 .item-total {
-  flex: 0 0 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.25rem;
+  font-size: 1.2rem;
+  font-weight: bold;
   color: yellow;
   background-color: #000;
-  font-weight: bold;
-  letter-spacing: 0.08rem;
-  font-size: 1.2rem;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
+  /* border: 1px solid red; */
 }
-
+.item-total h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.25rem;
+}
 @media screen and (max-width: 479px) {
-  .modal-item-container {
-    padding: 0;
-  }
-  .modal-item-details {
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 0;
-    margin-bottom: 0.25rem;
-    /* border: 1px solid red; */
-  }
   .modal-menuItem {
-    grid-column: 1 / 3;
-    grid-row: 1 / 3;
+    grid-row: 1 / 5;
   }
   .modal-info {
-    grid-column: 3 / 6;
-    grid-row: 1 / 3;
-    flex-direction: column;
-    margin: 0;
-
-    /* border: 1px solid red; */
+    grid-row: 1 / 5;
   }
-  .modal-item-title {
-    flex: 0 1 60%;
-    flex-direction: column;
-    padding: 0.2rem;
-    padding: 0.125rem;
-    /* border: 1px solid blue; */
+  .selected-items-info {
+    grid-row: 5 / 11;
   }
   .modal-item-title h3 {
-    padding: 0.15rem;
-    font-size: 1.2rem;
+    font-size: 1.05rem;
     font-size: 1rem;
+
     /* border: 1px solid red; */
   }
   .modal-item-title span {
-    padding: 0.15rem;
-    font-size: 0.875rem;
-    /* border: 1px solid red; */
+    font-size: 0.85rem;
   }
-  .drink-type {
-    flex: 0 0 40%;
-    padding: 0.15rem;
-    /* border: 1px solid red; */
-  }
-  .drink-type .hot-type,
-  .drink-type .iced-type {
-    margin: 0.5rem;
-    padding: 0.35rem 0.7rem;
-    /* width: auto; */
-    width: 100%;
-    font-size: 0.875rem;
-    letter-spacing: 0.05rem;
-    /* border: 1px solid red; */
-  }
-  .selected-items-info {
-    grid-column: 1 / 6;
-    grid-row: 3 / 6;
-  }
-  .items-info {
-    padding: 0.2rem;
-    margin: 0.1rem;
-    /* border: 1px solid blue; */
+  .hot-type,
+  .iced-type {
+    padding: 0.3rem 0.8rem;
+    font-size: 0.9rem;
   }
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
-    /* margin-bottom: 0.25rem; */
-    margin-bottom: 0.15rem;
-    padding: 0.2rem;
-    border-bottom: 1px solid rgba(176, 176, 176, 0.5);
-    /* border: 1px solid red; */
+    padding: 0.3rem 0.25rem;
+    /* border: 1px solid blue; */
+  }
+  .drink-type-warning {
+    font-size: 1rem;
   }
   .size-selection-row h4,
-  .quantity-selection-row h4,
-  .coffee-row h4 {
+  .quantity-selection-row h4 {
     font-size: 1rem;
-    margin: 0.2rem 0;
-    margin-bottom: 0.4rem;
-    padding: 0.2rem;
-    /* border: 1px solid red; */
-  }
-  .btn-row {
-    padding: 0.2rem;
   }
   .btn-row .coffee-size {
-    margin: 0 0.2rem;
-    padding: 0.25rem 0.5rem;
     font-size: 0.9rem;
   }
   .btn-row .minus,
-  .btn-row .plus,
-  .btn-row span {
-    padding: 0.1rem;
+  .btn-row .plus {
     font-size: 0.9rem;
   }
+  .btn-row span {
+    font-size: 0.9rem;
+  }
+  .coffee-row-header h4 {
+    font-size: 1rem;
+  }
+  .coffee-row-header p {
+    font-size: 0.85rem;
+  }
+  .item-total {
+    font-size: 1.1rem;
+  }
+}
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .modal-menuItem {
+    grid-row: 1 / 5;
+  }
+  .modal-info {
+    grid-row: 1 / 5;
+  }
+  .selected-items-info {
+    grid-row: 5 / 11;
+  }
+  .modal-item-title h3 {
+    font-size: 1.1rem;
+  }
+  .modal-item-title span {
+    /* font-size: 0.85rem; */
+    font-size: 0.875rem;
+    font-size: 0.9rem;
+  }
+  .hot-type,
+  .iced-type {
+    padding: 0.35rem 0.85rem;
+    font-size: 0.9rem;
+  }
+  .size-selection-row,
+  .quantity-selection-row,
+  .coffee-row {
+    padding: 0.35rem 0.25rem;
+  }
+  .drink-type-warning {
+    font-size: 1.05rem;
+  }
+  .size-selection-row h4,
+  .quantity-selection-row h4 {
+    font-size: 1.05rem;
+  }
+  .btn-row .coffee-size {
+    font-size: 0.95rem;
+  }
+  .btn-row .minus,
+  .btn-row .plus {
+    font-size: 0.95rem;
+  }
+  .btn-row span {
+    font-size: 0.95rem;
+  }
+  .coffee-row-header h4 {
+    font-size: 1.05rem;
+  }
   .coffee-row-header p {
     font-size: 0.875rem;
-    /* margin: 0.2rem 0; */
-    margin: 0;
-    margin-left: 0.2rem;
-    margin: 0.2rem;
-    padding: 0.2rem;
-    margin-bottom: 0.4rem;
-    line-height: 1;
-    /* border: 1px solid red; */
   }
-
   .item-total {
-    flex: 0 0 50px;
+    font-size: 1.15rem;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .modal-item-title h3 {
+    font-size: 1.2rem;
+  }
+  .modal-item-title span {
+    font-size: 0.9rem;
+    font-size: 0.95rem;
+  }
+  .hot-type,
+  .iced-type {
+    /* padding: 0.5rem 1rem; */
+    padding: 0.4rem 0.9rem;
+    font-size: 1rem;
+  }
+  .size-selection-row,
+  .quantity-selection-row,
+  .coffee-row {
+    padding: 0.4rem 0.25rem;
+  }
+  .drink-type-warning {
     font-size: 1.1rem;
+  }
+  .size-selection-row h4,
+  .quantity-selection-row h4 {
+    font-size: 1.1rem;
+  }
+  .btn-row .coffee-size {
+    font-size: 1rem;
+  }
+  .btn-row .minus,
+  .btn-row .plus {
+    font-size: 1rem;
+  }
+  .btn-row span {
+    font-size: 1rem;
+  }
+  .coffee-row-header h4 {
+    font-size: 1.1rem;
+  }
+  .coffee-row-header p {
+    font-size: 0.9rem;
+  }
+  .item-total {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .modal-item-title h3 {
+    font-size: 1.3rem;
+  }
+  .modal-item-title span {
+    font-size: 0.95rem;
+    font-size: 1rem;
+  }
+  .hot-type,
+  .iced-type {
+    padding: 0.45rem 0.95rem;
+    font-size: 1.1rem;
+  }
+  .size-selection-row,
+  .quantity-selection-row,
+  .coffee-row {
+    padding: 0.45rem 0.25rem;
+  }
+  .drink-type-warning {
+    font-size: 1.2rem;
+  }
+  .size-selection-row h4,
+  .quantity-selection-row h4 {
+    font-size: 1.2rem;
+  }
+  .btn-row .coffee-size {
+    font-size: 1.1rem;
+  }
+  .btn-row .minus,
+  .btn-row .plus {
+    font-size: 1.1rem;
+  }
+  .btn-row span {
+    font-size: 1.1rem;
+  }
+  .coffee-row-header h4 {
+    font-size: 1.2rem;
+  }
+  .coffee-row-header p {
+    font-size: 1rem;
+  }
+  .item-total {
+    font-size: 1.3rem;
+  }
+}
+@media screen and (min-width: 1280px) and (max-width: 1439px) {
+  .modal-item-title h3 {
+    font-size: 1.4rem;
+  }
+  .modal-item-title span {
+    font-size: 1rem;
+    font-size: 1.05rem;
+  }
+  .hot-type,
+  .iced-type {
+    padding: 0.5rem 1rem;
+
+    font-size: 1.2rem;
+  }
+  .size-selection-row,
+  .quantity-selection-row,
+  .coffee-row {
+    padding: 0.5rem 1rem;
+  }
+  .drink-type-warning {
+    font-size: 1.3rem;
+  }
+  .size-selection-row h4,
+  .quantity-selection-row h4 {
+    font-size: 1.3rem;
+  }
+  .btn-row .coffee-size {
+    font-size: 1.2rem;
+  }
+  .btn-row .minus,
+  .btn-row .plus {
+    font-size: 1.2rem;
+  }
+  .btn-row span {
+    font-size: 1.2rem;
+  }
+  .coffee-row-header h4 {
+    font-size: 1.3rem;
+  }
+  .coffee-row-header p {
+    font-size: 1.1rem;
+  }
+  .item-total {
+    font-size: 1.4rem;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .modal-item-title h3 {
+    font-size: 1.5rem;
+  }
+  .modal-item-title span {
+    font-size: 1.05rem;
+    font-size: 1.1rem;
+  }
+  .hot-type,
+  .iced-type {
+    /* padding: 0.5rem 1rem; */
+    padding: 0.55rem 1.05rem;
+    font-size: 1.3rem;
+  }
+  .size-selection-row,
+  .quantity-selection-row,
+  .coffee-row {
+    padding: 0.55rem 0.25rem;
+  }
+  .drink-type-warning {
+    font-size: 1.4rem;
+  }
+  .size-selection-row h4,
+  .quantity-selection-row h4 {
+    font-size: 1.4rem;
+  }
+  .btn-row .coffee-size {
+    font-size: 1.3rem;
+  }
+  .btn-row .minus,
+  .btn-row .plus {
+    font-size: 1.3rem;
+  }
+  .btn-row span {
+    font-size: 1.3rem;
+  }
+  .coffee-row-header h4 {
+    font-size: 1.4rem;
+  }
+  .coffee-row-header p {
+    font-size: 1.2rem;
+  }
+  .item-total {
+    font-size: 1.5rem;
   }
 }
