--- a/tableorder/src/components/Navbar/NavbarStyle.css
+++ b/tableorder/src/components/Navbar/NavbarStyle.css
@@ -1,39 +1,43 @@
 .nav {
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
+  padding: 0.25rem;
+  /* border: 1px solid red; */
 }
 .nav-container {
-  width: 100%;
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  margin: 0 0.5rem;
+  /* border: 1px solid black; */
 }
 .nav-center {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: 1.25rem;
-  /* border: 1px solid red; */
 }
 .nav-center h2 {
   font-size: 1.8rem;
   text-transform: capitalize;
+  color: #fff;
 }
-.nav-number-center {
-  margin-bottom: 1rem;
+.nav-number-info {
   margin-right: 1.25rem;
+  margin-bottom: 1rem;
   padding: 0.5rem;
-  background-color: darkorange;
+  /* background-color: darkorange; */
+  background-color: #fff;
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* color: #000; */
   color: #000;
   font-weight: bold;
 }
 
-.nav-number-center .icon {
+.nav-number-info .icon {
   font-size: 1.1rem;
   margin-right: 8px;
   line-height: 1;
@@ -45,11 +49,18 @@
 
 @media screen and (max-width: 479px) {
   .nav {
+    flex: 0 0 90px;
+    padding: 0;
+    margin: 0.25rem 0.4rem;
+    /* margin-bottom: 0.25rem; */
+    /* border: 3px solid red; */
   }
   .nav-container {
+    margin: 0.35rem 0;
+    margin: 0;
+    padding: 0;
     justify-content: center;
     position: relative;
-    /* border: 1px solid blue; */
   }
   .nav-center {
     margin-left: 0;
@@ -58,14 +69,14 @@
     font-size: 1.8rem;
     padding: 0.15rem;
   }
-  .nav-number-center {
+  .nav-number-info {
     position: absolute;
     top: 0;
     right: 5px;
     padding: 0.5rem;
     margin-right: 0;
   }
-  .nav-number-center .icon {
+  .nav-number-info .icon {
     font-size: 0.9rem;
   }
   .nav-number-table {
@@ -75,12 +86,16 @@
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .nav {
+    flex: 0 0 90px;
+    padding: 0;
+    margin: 0.25rem 0.5rem;
   }
   .nav-container {
+    margin: 0.5rem 0;
+    margin: 0;
+    padding: 0;
     justify-content: center;
     position: relative;
-    padding: 0;
-    /* border: 1px solid red; */
   }
   .nav-center {
     margin-left: 0;
@@ -89,14 +104,14 @@
     font-size: 1.9rem;
     padding: 0.15rem;
   }
-  .nav-number-center {
+  .nav-number-info {
     position: absolute;
     top: 0;
     right: 10px;
     padding: 0.75rem;
     margin-right: 0;
   }
-  .nav-number-center .icon {
+  .nav-number-info .icon {
     font-size: 1rem;
   }
   .nav-number-table {
@@ -105,7 +120,117 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  .nav {
+    /* padding: 0.25rem 0; */
+    padding: 0.25rem;
+  }
+  .nav-container {
+    margin: 0 0.5rem;
+    margin: 0 0.25rem;
+  }
   .nav-center {
     margin-left: 1.25rem;
+  }
+  .nav-center h2 {
+    font-size: 1.8rem;
+  }
+  .nav-number-info {
+    margin-right: 1.25rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+  }
+  .nav-number-info .icon {
+    font-size: 1.1rem;
+    margin-right: 8px;
+  }
+  .nav-number-table {
+    font-size: 1.1rem;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .nav {
+    padding: 0.25rem;
+  }
+  .nav-container {
+    /* margin: 0 0.6rem; */
+    margin: 0 0.3rem;
+  }
+  .nav-center {
+    margin-left: 1.5rem;
+  }
+  .nav-center h2 {
+    font-size: 1.9rem;
+  }
+  .nav-number-info {
+    margin-right: 1.5rem;
+    margin-bottom: 1.25rem;
+    padding: 0.75rem;
+  }
+  .nav-number-info .icon {
+    font-size: 1.2rem;
+    margin-right: 8px;
+  }
+  .nav-number-table {
+    font-size: 1.2rem;
+  }
+}
+@media screen and (min-width: 1280px) and (max-width: 1439px) {
+  .nav {
+    padding: 0.25rem;
+  }
+
+  .nav-container {
+    margin: 0 0.7rem;
+    margin: 0;
+    margin: 0 0.35rem;
+  }
+  .nav-center {
+    margin-left: 2rem;
+  }
+  .nav-center h2 {
+    font-size: 2rem;
+  }
+  .nav-number-info {
+    margin-right: 2rem;
+    margin-bottom: 1.5rem;
+    padding: 1rem;
+  }
+  .nav-number-info .icon {
+    font-size: 1.3rem;
+    margin-right: 8px;
+  }
+  .nav-number-table {
+    font-size: 1.3rem;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .nav {
+    padding: 0.25rem;
+    /* border: 1px solid red; */
+  }
+
+  .nav-container {
+    /* margin: 0 0.8rem; */
+    margin: 0 0.4rem;
+    /* border: 1px solid red; */
+  }
+  .nav-center {
+    margin-left: 2.1rem;
+  }
+  .nav-center h2 {
+    font-size: 2.1rem;
+  }
+  .nav-number-info {
+    margin-right: 2.5rem;
+    margin-bottom: 1.75rem;
+    padding: 1.25rem;
+  }
+  .nav-number-info .icon {
+    font-size: 1.4rem;
+    margin-right: 8px;
+  }
+  .nav-number-table {
+    font-size: 1.4rem;
   }
 }
