--- a/tableorder/src/components/Section/MenuListStyle.css
+++ b/tableorder/src/components/Section/MenuListStyle.css
@@ -1,25 +1,142 @@
 .section {
   display: flex;
-  border-radius: 0.25rem;
-  /* background-color: red; */
+  position: relative;
   overflow: hidden;
-  /* width: 100%; */
+  border-radius: 0.25rem;
+  /* border: 1px solid rgba(255, 255, 255, 0.5); */
+  /**/
+  padding: 0.2rem 0;
+  /* margin: 0.25rem 0; */
+  background-color: rgb(29, 29, 29);
 }
 .menulist-container {
   display: flex;
   width: 100%;
-  /* overflow: hidden; */
-  border: 1px solid blue;
+  height: 100%;
+  padding: 0.125rem;
+  overflow: auto;
 }
 
 .menulist-center {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(230px, 250px);
-  height: 100%;
   width: 100%;
-  /* padding: 0.15rem; */
-  /* margin: 0.15rem; */
+
+  /* height: min-content; */
+
   /* border: 1px solid red; */
-  overflow: auto;
+  /* overflow: auto; */
+}
+
+@media screen and (max-width: 479px) {
+  .section {
+    /* margin: 0.25rem 0.4rem; */
+    margin: 0 0.4rem;
+    /* margin-bottom: 0.25rem; */
+    /* border: 1px solid red; */
+  }
+  .menulist-center {
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    /* grid-auto-rows: minmax(210px, 230px); */
+    grid-auto-rows: 220px;
+    grid-auto-rows: 210px;
+    gap: 0.2rem;
+    /* border: 1px solid black; */
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .section {
+    margin: 0 0.5rem;
+    /* margin-bottom: 0.25rem; */
+  }
+  .menulist-center {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    grid-auto-rows: minmax(230px, 250px);
+    grid-auto-rows: 230px;
+    /* gap: 0.175rem; */
+    gap: 0.2rem;
+    /* padding: 0; */
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .section {
+    /* padding: 0.1rem 0.25rem; */
+    /* margin: 0.25rem 0; */
+    padding: 0.2rem;
+    /* border: 1px solid blue; */
+  }
+  .menulist-container {
+    /* margin-right: 0.25rem; */
+
+    /* border: 1px solid red; */
+  }
+  .menulist-center {
+    /* grid-template-columns: repeat(3, 1fr); */
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-auto-rows: minmax(230px, 280px);
+    grid-auto-rows: 230px;
+    gap: 0.2rem;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .section {
+    padding: 0.1rem 0.25rem;
+
+    /* border: 1px solid red; */
+  }
+  .menulist-container {
+    /* margin-right: 0.3rem; */
+  }
+  .menulist-center {
+    /* grid-template-columns: repeat(4, 1fr); */
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(185px, 1fr)); */
+    grid-auto-rows: minmax(250px, 280px);
+    grid-auto-rows: 250px;
+    gap: 0.225rem;
+  }
+}
+@media screen and (min-width: 1280px) and (max-width: 1439px) {
+  .section {
+    padding: 0.1rem 0.25rem;
+    /* border: 1px solid blue; */
+  }
+  .menulist-container {
+    /* margin-right: 0.35rem; */
+    /* border: 1px solid blue; */
+  }
+  .menulist-center {
+    /* grid-template-columns: repeat(5, 1fr); */
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(190px, 1fr)); */
+    grid-auto-rows: minmax(280px, 310px);
+    /* grid-auto-rows: 260px; */
+    grid-auto-rows: 280px;
+    gap: 0.25rem;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .section {
+    padding: 0.1rem 0.25rem;
+    /* border: 1px solid red; */
+  }
+  .menulist-container {
+    /* margin-right: 0.4rem; */
+    /* border: 1px solid red; */
+  }
+  .menulist-center {
+    /* grid-template-columns: repeat(5, 1fr); */
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+    grid-auto-rows: minmax(310px, 340px);
+    grid-auto-rows: 310px;
+    gap: 0.275rem;
+  }
 }
