--- a/tableorder/src/components/Category/CategoryStyle.css
+++ b/tableorder/src/components/Category/CategoryStyle.css
@@ -63,7 +63,7 @@
 @media screen and (max-width: 479px) {
   .category {
     margin: 0 0.4rem;
-
+    margin-bottom: 0.25rem;
     /* margin-bottom: 0.25rem; */
     padding: 0;
     flex-direction: row;
@@ -94,7 +94,7 @@
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .category {
     margin: 0 0.5rem;
-    /* margin-bottom: 0.25rem; */
+    margin-bottom: 0.25rem;
     padding: 0;
     padding: 0 0.25rem;
     flex-direction: row;
