--- a/tableorder/src/components/Footer/OrderSummaryStyle.css
+++ b/tableorder/src/components/Footer/OrderSummaryStyle.css
@@ -163,8 +163,10 @@ footer {
     font-size: 1rem;
   }
   .cart-amount {
-    top: -2px;
-    right: -2px;
+    /* top: -2px; */
+    /* right: -2px; */
+    right: -3px;
+    top: -3px;
     width: 17px;
     height: 17px;
     font-size: 0.8rem;
@@ -198,8 +200,10 @@ footer {
     font-size: 1.1rem;
   }
   .cart-amount {
-    top: -1px;
-    right: -1px;
+    /* top: -1px; */
+    /* right: -1px; */
+    top: -3px;
+    right: -3px;
     width: 18px;
     height: 18px;
     font-size: 0.9rem;
@@ -228,8 +232,10 @@ footer {
     font-size: 1.2rem;
   }
   .cart-amount {
-    top: -1px;
-    right: -1px;
+    /* top: -1px; */
+    /* right: -1px; */
+    top: -3px;
+    right: -3px;
     width: 19px;
     height: 19px;
     font-size: 1rem;
@@ -257,8 +263,10 @@ footer {
     font-size: 1.3rem;
   }
   .cart-amount {
-    top: -1px;
-    right: -1px;
+    /* top: -1px; */
+    /* right: -1px; */
+    top: -3px;
+    right: -3px;
     width: 20px;
     height: 20px;
     font-size: 1.1rem;
