--- a/tableorder/src/components/Section/ItemsStyle.css
+++ b/tableorder/src/components/Section/ItemsStyle.css
@@ -1,13 +1,14 @@
 .item-article {
   border-radius: 0.25rem;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  /* border: 1px solid rgba(255, 255, 255, 0.5); */
   transition: all 0.3s linear;
   cursor: pointer;
 
   /*옆 스크롤바 padding or margin*/
   /* padding: 0.2rem; */
   margin: 0 0.1rem;
-  margin-bottom: 0.15rem;
+  /* margin-bottom: 0.15rem; */
+  margin-bottom: 0.25rem;
 }
 
 .item-article:hover {
