--- a/tableorder/src/components/Section/MenuListStyle.css
+++ b/tableorder/src/components/Section/MenuListStyle.css
@@ -8,13 +8,16 @@
   padding: 0.2rem 0;
   /* margin: 0.25rem 0; */
   background-color: rgb(29, 29, 29);
+  /* border: 1px solid red; */
 }
 .menulist-container {
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   padding: 0.125rem;
   overflow: auto;
+  /* border: 1px solid blue; */
 }
 
 .menulist-center {
@@ -22,11 +25,6 @@
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(230px, 250px);
   width: 100%;
-
-  /* height: min-content; */
-
-  /* border: 1px solid red; */
-  /* overflow: auto; */
 }
 
 @media screen and (max-width: 479px) {
@@ -79,7 +77,9 @@
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     grid-auto-rows: minmax(230px, 280px);
     grid-auto-rows: 230px;
-    gap: 0.2rem;
+    gap: 0.225rem;
+    margin-top: 0.225rem;
+    margin-bottom: 0.225rem;
   }
 }
 
@@ -100,6 +100,9 @@
     grid-auto-rows: minmax(250px, 280px);
     grid-auto-rows: 250px;
     gap: 0.225rem;
+
+    margin-top: 0.225rem;
+    margin-bottom: 0.225rem;
   }
 }
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
@@ -120,6 +123,8 @@
     /* grid-auto-rows: 260px; */
     grid-auto-rows: 280px;
     gap: 0.25rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -137,6 +142,8 @@
     grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
     grid-auto-rows: minmax(310px, 340px);
     grid-auto-rows: 310px;
-    gap: 0.275rem;
+    gap: 0.25rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
   }
 }
