--- a/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
+++ b/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
@@ -16,9 +16,10 @@
   transform: translate(-50%, -50%);
   width: 70%;
   height: 80%;
-  max-width: 800px;
-  max-height: 500px;
-  /* padding: 0.5rem; */
+  /* max-width: 800px; */
+  /* max-height: 500px; */
+  max-width: 70vw;
+  max-height: 80vh;
   padding: 0.25rem;
   display: flex;
   flex-direction: column;
@@ -66,12 +67,11 @@
 .order-item-container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
   margin-top: 0.25rem;
   padding: 0.7rem 0.35rem;
   border-top: 2px solid #4d4d4d;
   border-bottom: 2px solid #4d4d4d;
-  /* border: 1px solid red; */
 }
 .order-item-details {
   display: flex;
@@ -149,7 +149,6 @@
   .order-title p {
     margin-left: 1rem;
     font-size: 1rem;
-    /* border: 1px solid red; */
   }
   .order-message {
     padding: 1rem 0.5rem;
@@ -157,30 +156,23 @@
 
     font-size: 1.3rem;
     font-size: 1.2rem;
-    /* border: 1px solid red; */
   }
   .order-items-list {
     padding: 0.25rem 1rem;
-    /* border: 1px solid red; */
   }
   .order-item-container {
-    /* padding: 0.5rem 0.25rem; */
-    padding: 0.6rem 0.25rem;
-    /* border: 1px solid red; */
+    padding: 0.5rem 0.25rem;
   }
   .order-item-details p,
   .order-item-details span {
     font-size: 1rem;
-    /* border: 1px solid red; */
   }
   .order-summary {
     flex: 0 0 50px;
-    /* border: 1px solid red; */
   }
   .order-total-info {
     margin: 0 1rem;
     font-size: 1.1rem;
-    /* border: 1px solid red; */
   }
   .close-order-modal {
     flex: 0 0 30%;
@@ -206,19 +198,15 @@
   .order-title h2 {
     margin-left: 0.75rem;
     font-size: 1.45rem;
-    /* margin-left: 0.5rem; */
-    /* border: 1px solid blue; */
   }
   .order-title p {
     margin-left: 1.25rem;
     font-size: 1.05rem;
-    /* border: 1px solid red; */
   }
   .order-message {
     padding: 1rem;
     padding-left: 1.25rem;
     font-size: 1.25rem;
-    /* border: 1px solid blue; */
   }
   /*확인필요*/
   .order-items-list {
@@ -226,8 +214,7 @@
   }
   /*확인필요*/
   .order-item-container {
-    padding: 0.65rem 0.3rem;
-    /* border: 1px solid red; */
+    padding: 0.5rem 0.25rem;
   }
   .order-item-details p,
   .order-item-details span {
@@ -250,8 +237,11 @@
   .order-modal-content {
     width: 70%;
     height: 80%;
-    max-width: 400px;
-    max-height: 700px;
+
+    /* max-width: 70vw; */
+    /* max-height: 80vh; */
+    max-width: 70vw;
+    max-height: 80vh;
   }
   .order-title {
     flex: 0 0 64px;
@@ -261,10 +251,8 @@
     font-size: 1.5rem;
   }
   .order-title p {
-    /* margin-left: 1rem; */
     margin-left: 1.5rem;
     font-size: 1.1rem;
-    /* border: 1px solid red; */
   }
   .order-message {
     padding: 1rem;
@@ -276,10 +264,12 @@
   .order-items-list {
     /* padding: 0.25rem 1rem; */
     padding: 0.4rem 1.25rem;
-    /* border: 1px solid red; */
   }
   .order-item-container {
-    padding: 0.7rem 0.35rem;
+    /* padding: 0.7rem 0.35rem; */
+    padding: 0.75rem 0.5rem;
+    /* border: 1px solid red; */
+    /* padding: 0.7rem 0.5rem; */
     /* border: 1px solid red; */
   }
   .order-item-details p,
@@ -303,10 +293,9 @@
   .order-modal-content {
     width: 80%;
     height: 70%;
-    max-height: 500px;
     /**/
-    max-width: 500px;
-    max-height: 700px;
+    max-width: 70vw;
+    max-height: 80vh;
   }
   .order-title {
     flex: 0 0 66px;
@@ -332,7 +321,8 @@
   }
   .order-item-container {
     /* padding: 0.7rem 0.35rem; */
-    padding: 0.75rem 0.4rem;
+    /* padding: 0.75rem 0.4rem; */
+    padding: 0.75rem 0.5rem;
   }
   .order-item-details p,
   .order-item-details span {
@@ -354,10 +344,9 @@
   .order-modal-content {
     width: 75%;
     height: 70%;
-    max-height: 600px;
     /**/
-    max-width: 600px;
-    max-height: 800px;
+    max-width: 60vw;
+    max-height: 80vh;
   }
   .order-title {
     flex: 0 0 68px;
@@ -380,7 +369,8 @@
     padding: 0.5rem 1.35rem;
   }
   .order-item-container {
-    padding: 0.8rem 0.45rem;
+    /* padding: 0.8rem 0.45rem; */
+    padding: 1rem 0.75rem;
   }
   .order-item-details p,
   .order-item-details span {
@@ -402,11 +392,9 @@
   .order-modal-content {
     width: 70%;
     height: 70%;
-    max-height: 700px;
-    /* max-height: 800px; */
     /**/
-    max-width: 700px;
-    max-height: 800px;
+    max-width: 60vw;
+    max-height: 80vh;
   }
   .order-title {
     flex: 0 0 70px;
@@ -428,7 +416,8 @@
     padding: 0.55rem 1.4rem;
   }
   .order-item-container {
-    padding: 0.85rem 0.5rem;
+    /* padding: 0.85rem 0.5rem; */
+    padding: 1rem 0.75rem;
   }
   .order-item-details p,
   .order-item-details span {
