--- a/tableorder/src/components/Footer/OrderSummaryStyle.css
+++ b/tableorder/src/components/Footer/OrderSummaryStyle.css
@@ -106,8 +106,8 @@ footer {
   .cart-amount {
     top: -4px;
     right: -4px;
-    width: 15px;
-    height: 15px;
+    width: 16px;
+    height: 16px;
     font-size: 0.6rem;
   }
 }
@@ -132,11 +132,13 @@ footer {
     font-size: 0.9rem;
   }
   .cart-amount {
-    top: -3px;
-    right: -3px;
+    top: -4px;
+    right: -4px;
+    /* width: 16px; */
+    /* height: 16px; */
     width: 16px;
     height: 16px;
-    font-size: 0.7rem;
+    font-size: 0.65rem;
   }
 }
 
@@ -165,11 +167,13 @@ footer {
   .cart-amount {
     /* top: -2px; */
     /* right: -2px; */
-    right: -3px;
-    top: -3px;
-    width: 17px;
-    height: 17px;
-    font-size: 0.8rem;
+    right: -4px;
+    top: -4px;
+    /* width: 17px; */
+    /* height: 17px; */
+    width: 20px;
+    height: 20px;
+    font-size: 0.7rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
@@ -202,11 +206,13 @@ footer {
   .cart-amount {
     /* top: -1px; */
     /* right: -1px; */
-    top: -3px;
-    right: -3px;
-    width: 18px;
-    height: 18px;
-    font-size: 0.9rem;
+    top: -4px;
+    right: -4px;
+    /* width: 18px; */
+    /* height: 18px; */
+    width: 20px;
+    height: 20px;
+    font-size: 0.75rem;
   }
 }
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
@@ -234,11 +240,13 @@ footer {
   .cart-amount {
     /* top: -1px; */
     /* right: -1px; */
-    top: -3px;
-    right: -3px;
-    width: 19px;
-    height: 19px;
-    font-size: 1rem;
+    top: -5px;
+    right: -5px;
+    /* width: 19px; */
+    /* height: 19px; */
+    width: 22px;
+    height: 22px;
+    font-size: 0.8rem;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -265,10 +273,12 @@ footer {
   .cart-amount {
     /* top: -1px; */
     /* right: -1px; */
-    top: -3px;
-    right: -3px;
-    width: 20px;
-    height: 20px;
-    font-size: 1.1rem;
+    top: -5px;
+    right: -5px;
+    /* width: 20px; */
+    /* height: 20px; */
+    width: 22px;
+    height: 22px;
+    font-size: 0.85rem;
   }
 }
