--- a/tableorder/src/components/Modal/OrderDetails/OrderDetailsStyle.css
+++ b/tableorder/src/components/Modal/OrderDetails/OrderDetailsStyle.css
@@ -16,8 +16,8 @@
   transform: translate(-50%, -50%);
   width: 70%;
   height: 80%;
-  max-width: 800px;
-  /* max-height: 500px; */
+  max-width: 70vw;
+  max-height: 80vh;
   background-color: #4d4d4d;
   padding: 0.25rem;
   display: flex;
@@ -46,7 +46,6 @@
   margin-bottom: 0.25rem;
   background-color: #fff;
   overflow: auto;
-  /* border: 1px solid red; */
 }
 
 .details-summary {
@@ -118,7 +117,6 @@
   }
   .details-items-list {
     padding: 0.25rem 1rem;
-    /* border: 1px solid blue; */
   }
   .details-total-info,
   .details-total-price {
@@ -154,7 +152,6 @@
   }
   .details-items-list {
     padding: 0.35rem 1.2rem;
-    /* border: 1px solid red; */
   }
   .details-total-info,
   .details-total-price {
@@ -169,10 +166,11 @@
   .details-modal-content {
     width: 70%;
     height: 80%;
-    /* max-height: 500px; */
     /**/
-    max-width: 400px;
-    max-height: 700px;
+    /* max-width: 400px; */
+    /* max-height: 700px; */
+    max-width: 70vw;
+    max-height: 80vh;
   }
   .details-title {
     flex: 0 0 64px;
@@ -198,10 +196,12 @@
   .details-modal-content {
     width: 80%;
     height: 70%;
-    /* max-height: 500px; */
     /**/
-    max-width: 500px;
-    max-height: 700px;
+    /* max-width: 500px; */
+    /* max-height: 700px; */
+
+    max-width: 70vw;
+    max-height: 80vh;
   }
   .details-title {
     flex: 0 0 66px;
@@ -226,10 +226,11 @@
   .details-modal-content {
     width: 75%;
     height: 70%;
-    /* max-height: 600px; */
     /**/
-    max-width: 600px;
-    max-height: 800px;
+    /* max-width: 600px; */
+    /* max-height: 800px; */
+    max-width: 60vw;
+    max-height: 80vh;
   }
   .details-title {
     flex: 0 0 68px;
@@ -254,10 +255,11 @@
   .details-modal-content {
     width: 70%;
     height: 70%;
-    /* max-height: 700px; */
     /**/
-    max-width: 700px;
-    max-height: 800px;
+    /* max-width: 700px; */
+    /* max-height: 800px; */
+    max-width: 60vw;
+    max-height: 80vh;
   }
   .details-title {
     flex: 0 0 70px;
