--- a/tableorder/src/components/Modal/OrderDetails/OrderOptionsStyle.css
+++ b/tableorder/src/components/Modal/OrderDetails/OrderOptionsStyle.css
@@ -1,7 +1,7 @@
 .details-item-container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
   /**/
   margin-top: 0.25rem;
   padding: 0.7rem 0.35rem;
@@ -27,7 +27,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 0.25rem;
-  padding: 0.15rem;
+  padding: 0.25rem;
   background-color: transparent;
   border-color: transparent;
   font-size: 0.9rem;
@@ -35,6 +35,10 @@
   color: #000;
   cursor: pointer;
 }
+.toggle-options-btn span {
+  margin-right: 0.25rem;
+}
+
 .options-container {
   display: flex;
   flex-direction: column;
@@ -43,23 +47,22 @@
   font-size: 0.9rem;
   font-weight: bold;
   text-transform: capitalize;
-  border: 1px solid #4d4d4d;
-  /* border: 1px solid rgba(77, 77, 77, 0.8); */
+  border: 0.5px solid rgba(77, 77, 77, 0.5);
   border-radius: 0.25rem;
 }
 .option-item,
 .option-detail {
   display: flex;
   justify-content: space-between;
-  padding: 0.15rem;
+  /* padding: 0.15rem; */
+  padding: 0.25rem 0.5rem;
   margin-bottom: 0.25rem;
   /* border: 1px solid blue; */
 }
 
 @media screen and (max-width: 479px) {
   .details-item-container {
-    padding: 0.6rem 0.25rem;
-    /* border: 1px solid red; */
+    padding: 0.5rem 0.25rem;
   }
   .details-item-info p,
   .details-item-info span {
@@ -68,90 +71,107 @@
   .toggle-options-btn {
     font-size: 0.85rem;
   }
+
   .options-container {
-    margin: 0 0.6rem;
+    /* margin: 0 0.6rem; */
+    margin: 0 1rem;
     font-size: 0.85rem;
+    /* border: 1px solid red; */
   }
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .details-item-container {
-    padding: 0.65rem 0.3rem;
+    /* padding: 0.65rem 0.3rem; */
+    padding: 0.5rem 0.25rem;
   }
   .details-item-info p,
   .details-item-info span {
     font-size: 1.05rem;
   }
   .toggle-options-btn {
-    font-size: 0.875rem;
+    /* font-size: 0.875rem; */
+    font-size: 0.9rem;
   }
   .options-container {
-    margin: 0 0.7rem;
+    /* margin: 0 0.7rem; */
     font-size: 0.875rem;
+    margin: 0 1rem;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .details-item-container {
-    padding: 0.7rem 0.35rem;
+    /* padding: 0.7rem 0.35rem; */
+    padding: 0.75rem 0.5rem;
   }
   .details-item-info p,
   .details-item-info span {
     font-size: 1.1rem;
   }
   .toggle-options-btn {
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
+    font-size: 0.95rem;
   }
   .options-container {
     margin: 0 0.8rem;
     font-size: 0.9rem;
+    margin: 0 1.25rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .details-item-container {
-    padding: 0.75rem 0.4rem;
+    /* padding: 0.75rem 0.4rem; */
+    padding: 0.75rem 0.5rem;
   }
   .details-item-info p,
   .details-item-info span {
     font-size: 1.2rem;
   }
   .toggle-options-btn {
-    font-size: 0.925rem;
+    /* font-size: 0.925rem; */
+    font-size: 1rem;
   }
   .options-container {
-    margin: 0 0.9rem;
+    /* margin: 0 0.9rem; */
     font-size: 0.925rem;
+    margin: 0 1.25rem;
   }
 }
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .details-item-container {
-    padding: 0.8rem 0.45rem;
+    /* padding: 0.8rem 0.45rem; */
+    padding: 1rem 0.75rem;
   }
   .details-item-info p,
   .details-item-info span {
     font-size: 1.3rem;
   }
   .toggle-options-btn {
-    font-size: 0.95rem;
+    /* font-size: 0.95rem; */
+    font-size: 1.05rem;
   }
   .options-container {
-    margin: 0 1rem;
+    /* margin: 0 1rem; */
     font-size: 0.95rem;
+    margin: 0 1.5rem;
   }
 }
 @media screen and (min-width: 1440px) {
   .details-item-container {
-    padding: 0.85rem 0.5rem;
+    /* padding: 0.85rem 0.5rem; */
+    padding: 1rem 0.75rem;
   }
   .details-item-info p,
   .details-item-info span {
     font-size: 1.4rem;
   }
   .toggle-options-btn {
-    font-size: 0.975rem;
+    /* font-size: 0.975rem; */
+    font-size: 1.1rem;
   }
   .options-container {
-    margin: 0 1.1rem;
-    /* margin: 0 1.5rem; */
+    /* margin: 0 1.1rem; */
     font-size: 0.975rem;
+    margin: 0 1.5rem;
   }
 }
