전체 높이 조절

--- a/tableorder/src/components/Modal/ItemCart/ItemCartStyle.css
+++ b/tableorder/src/components/Modal/ItemCart/ItemCartStyle.css
@@ -17,10 +17,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 0.25rem;
   background-color: #4d4d4d;
   transition: all 0.3s linear;
-  /* padding: 0 0.25rem; */
-  padding: 0.25rem;
+
+  /**/
+  /* overflow: hidden; */
+  overflow-y: auto;
+  min-height: 500px;
 }
 .cart-title {
   flex: 0 0 80px;
@@ -63,9 +67,11 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: 120px;
-  overflow: auto;
   background-color: #fafafa;
   padding: 0.3rem;
+  overflow: auto;
+  /* overflow: hidden; */
+  min-height: 300px;
 }
 
 .cart-item-total {
@@ -129,18 +135,15 @@
 
 .cart-left:hover {
   background-color: #757575;
-  /* color: #fff; */
   color: #000;
 }
 .cart-right:hover {
   background-color: #fbc02d;
-  /* color: #fff; */
   color: #000;
 }
 
 @media screen and (max-width: 479px) {
   .cart-container {
-    /* width: 80%; */
     width: 70%;
   }
   .cart-title {
@@ -156,7 +159,6 @@
   }
   .cart-item-total {
     flex: 0 0 50px;
-    /* padding: 0 1rem; */
   }
   .cart-item-total-quantity,
   .cart-item-total-price {
@@ -176,8 +178,6 @@
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .cart-container {
-    /* width: 60%; */
-    /* width: 70%; */
     width: 60%;
     max-width: 350px;
   }
@@ -195,13 +195,10 @@
   }
   .cart-item-total {
     flex: 0 0 50px;
-    /* padding: 0 1rem; */
   }
 
   .cart-item-total-quantity,
   .cart-item-total-price {
-    font-size: 1.2rem;
-    font-size: 1.1rem;
     font-size: 1.15rem;
   }
   .cart-btns {
@@ -209,30 +206,21 @@
   }
   .cart-left,
   .cart-right {
-    font-size: 1.1rem;
-    font-size: 1rem;
     font-size: 1.05rem;
   }
   .cart-left .icon,
   .cart-right .icon {
-    font-size: 1.1rem;
-    font-size: 1rem;
     font-size: 1.05rem;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cart-container {
-    /* width: 55%; */
-    /**/
-    /* width: 40%; */
     width: 50%;
     max-width: 400px;
   }
   .cart-title {
     flex: 0 0 80px;
-    /* padding-left: 1rem; */
-    padding: 1rem;
     padding: 1.1rem;
   }
   .cart-title h2 {
@@ -244,12 +232,9 @@
   }
   .cart-item-total {
     flex: 0 0 60px;
-    /* padding: 0 1.2rem; */
-    /* padding: 0 1rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
-    font-size: 1.3rem;
     font-size: 1.2rem;
   }
   .cart-btns {
@@ -267,15 +252,11 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cart-container {
-    /* width: 50%; */
-    /**/
-    /* width: 40%; */
     width: 45%;
     max-width: 450px;
   }
   .cart-title {
     flex: 0 0 90px;
-    /* padding-left: 1rem; */
     padding: 1rem;
   }
   .cart-title h2 {
@@ -287,8 +268,6 @@
   }
   .cart-item-total {
     flex: 0 0 65px;
-    /* padding: 0 1.2rem; */
-    /* padding: 0 1rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
@@ -309,8 +288,6 @@
 
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .cart-container {
-    width: 45%;
-    /**/
     width: 40%;
     max-width: 500px;
   }
@@ -327,8 +304,6 @@
   }
   .cart-item-total {
     flex: 0 0 70px;
-    /* padding: 0 1.2rem; */
-    /* padding: 0 1rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
@@ -364,8 +339,6 @@
   }
   .cart-item-total {
     flex: 0 0 75px;
-    /* padding: 0 1.2rem; */
-    /* padding: 0 2rem; */
   }
   .cart-item-total-price,
   .cart-item-total-quantity {
