--- a/tableorder/src/components/Modal/ModalItems/OptionItemStyle.css
+++ b/tableorder/src/components/Modal/ModalItems/OptionItemStyle.css
@@ -19,9 +19,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 200px;
   background-color: #b0b0b0;
   border-radius: 0.25rem;
-  /* border: 1px solid red; */
 }
 .single-img {
   width: 100%;
@@ -35,9 +35,9 @@
   display: flex;
   flex-direction: column;
   align-content: space-between;
-  overflow: auto;
+  min-height: 200px;
   padding: 0.25rem;
-  /* border: 1px solid red; */
+  overflow: auto;
 }
 .modal-item-title {
   flex: 1;
@@ -45,8 +45,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid red; */
-  /* font-size: 0.8rem; */
 }
 .modal-item-title h3 {
   flex-shrink: 0;
@@ -56,7 +54,6 @@
   padding: 0.25rem;
   margin-bottom: 0.25rem;
   color: #000;
-  /* border: 1px solid blue; */
 }
 .modal-item-title span {
   flex-shrink: 0;
@@ -68,14 +65,12 @@
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 0.05rem;
-  /* border: 1px solid blue; */
 }
 .drink-type {
   flex-shrink: 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  /* border: 1px solid blue; */
   padding: 0.5rem 0;
 }
 .hot-type,
@@ -83,14 +78,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.25rem 0.5rem;
   background-color: transparent;
   border-color: transparent;
-  font-weight: bold;
   color: rgba(0, 0, 0, 0.5);
-  text-transform: uppercase;
+  font-weight: bold;
   letter-spacing: 0.05rem;
+  text-transform: uppercase;
   cursor: pointer;
-  padding: 0.25rem 0.5rem;
 }
 .hot-type:hover,
 .iced-type:hover {
@@ -98,7 +93,6 @@
 }
 .active-hot.hot-type,
 .active-iced.iced-type {
-  /* color: #b0b0b0; */
   color: #000;
 }
 .selected-items-info {
@@ -108,13 +102,12 @@
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0.25rem;
   overflow: auto;
-  /* border: 1px solid red; */
 }
 .drink-type-warning {
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
   font-size: 1.1rem;
   font-weight: bold;
 }
@@ -123,16 +116,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 350px;
   padding: 0.25rem;
 }
 .size-selection-row,
 .quantity-selection-row,
 .coffee-row {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   margin-bottom: 0.25rem;
   padding: 0.4rem 0.25rem;
   font-weight: bold;
@@ -144,7 +138,6 @@
   padding: 0.25rem;
   font-size: 1.1rem;
   color: #000;
-  /* border: 1px solid red; */
 }
 .btn-row {
   width: 100%;
@@ -167,7 +160,7 @@
 }
 .btn-row .active-size,
 .coffee-size:hover {
-  color: #b0b0b0;
+  /* color: #b0b0b0; */
 
   /**/
   color: #000;
@@ -205,16 +198,13 @@
   padding: 0.25rem;
   font-size: 1.15rem;
   color: #000;
-  /* border: 1px solid red; */
 }
 .coffee-row-header p {
   display: flex;
   justify-content: center;
   align-items: center;
-
-  font-size: 1rem;
   padding: 0.25rem;
-  /* border: 1px solid red; */
+  font-size: 1rem;
 }
 .item-total {
   display: flex;
@@ -226,7 +216,6 @@
   color: yellow;
   background-color: #000;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
-  /* border: 1px solid red; */
 }
 .item-total h3 {
   display: flex;
@@ -235,14 +224,15 @@
   padding: 0.25rem;
 }
 @media screen and (max-width: 479px) {
-  .modal-menuItem {
-    grid-row: 1 / 5;
-  }
+  .modal-menuItem,
   .modal-info {
     grid-row: 1 / 5;
+    min-height: 150px;
   }
+
   .selected-items-info {
     grid-row: 5 / 11;
+    border: 3px solid purple;
   }
   .modal-item-title h3 {
     font-size: 1rem;
@@ -256,6 +246,11 @@
   }
   .drink-type-warning {
     font-size: 1rem;
+  }
+
+  /**/
+  .items-info {
+    min-height: 300px;
   }
   .size-selection-row,
   .quantity-selection-row,
@@ -288,12 +283,12 @@
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
-  .modal-menuItem {
-    grid-row: 1 / 5;
-  }
+  .modal-menuItem,
   .modal-info {
     grid-row: 1 / 5;
+    min-height: 150px;
   }
+
   .selected-items-info {
     grid-row: 5 / 11;
   }
@@ -309,6 +304,9 @@
   }
   .drink-type-warning {
     font-size: 1.1rem;
+  }
+  .items-info {
+    min-height: 300px;
   }
   .size-selection-row,
   .quantity-selection-row,
@@ -354,6 +352,7 @@
   .drink-type-warning {
     font-size: 1.2rem;
   }
+
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
@@ -398,6 +397,7 @@
   .drink-type-warning {
     font-size: 1.2rem;
   }
+
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
@@ -482,6 +482,7 @@
   .iced-type {
     font-size: 1.3rem;
   }
+
   .drink-type-warning {
     font-size: 1.4rem;
   }
