--- a/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
+++ b/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
@@ -25,7 +25,9 @@
   flex-direction: column;
   background-color: #4d4d4d;
   border-radius: 0.25rem;
-  overflow: hidden;
+  /* overflow: hidden; */
+  overflow-y: auto;
+  min-height: 300px;
 }
 .order-title {
   flex: 0 0 64px;
@@ -63,6 +65,7 @@
   margin-bottom: 0.25rem;
   background-color: #fff;
   overflow: auto;
+  min-height: 300px;
 }
 .order-item-container {
   display: flex;
@@ -114,7 +117,6 @@
   font-weight: bold;
   color: #000;
   background-color: #fff;
-  /* background-color: #b0b0b0; */
   border-color: transparent;
   border-bottom-right-radius: 0.25rem;
   cursor: pointer;
@@ -151,10 +153,8 @@
     font-size: 1rem;
   }
   .order-message {
-    padding: 1rem 0.5rem;
+    /* padding: 1rem 0.5rem; */
     padding: 1rem;
-
-    font-size: 1.3rem;
     font-size: 1.2rem;
   }
   .order-items-list {
@@ -257,20 +257,13 @@
   .order-message {
     padding: 1rem;
     padding-left: 1.3rem;
-    /* padding-left: 1.5rem; */
     font-size: 1.3rem;
-    /* border: 1px solid red; */
   }
   .order-items-list {
-    /* padding: 0.25rem 1rem; */
     padding: 0.4rem 1.25rem;
   }
   .order-item-container {
-    /* padding: 0.7rem 0.35rem; */
     padding: 0.75rem 0.5rem;
-    /* border: 1px solid red; */
-    /* padding: 0.7rem 0.5rem; */
-    /* border: 1px solid red; */
   }
   .order-item-details p,
   .order-item-details span {
@@ -282,7 +275,6 @@
   .order-total-info {
     margin: 0 1.3rem;
     font-size: 1.2rem;
-    /* border: 1px solid red; */
   }
   .close-order-modal {
     flex: 0 0 25%;
@@ -301,13 +293,10 @@
     flex: 0 0 66px;
   }
   .order-title h2 {
-    /* margin-left: 1.1rem; */
     margin-left: 1.05rem;
     font-size: 1.6rem;
-    /* border: 1px solid red; */
   }
   .order-title p {
-    /* margin-left: 1.525rem; */
     margin-left: 1.6rem;
     font-size: 1.2rem;
   }
@@ -320,8 +309,6 @@
     padding: 0.45rem 1.3rem;
   }
   .order-item-container {
-    /* padding: 0.7rem 0.35rem; */
-    /* padding: 0.75rem 0.4rem; */
     padding: 0.75rem 0.5rem;
   }
   .order-item-details p,
@@ -369,7 +356,6 @@
     padding: 0.5rem 1.35rem;
   }
   .order-item-container {
-    /* padding: 0.8rem 0.45rem; */
     padding: 1rem 0.75rem;
   }
   .order-item-details p,
@@ -416,7 +402,6 @@
     padding: 0.55rem 1.4rem;
   }
   .order-item-container {
-    /* padding: 0.85rem 0.5rem; */
     padding: 1rem 0.75rem;
   }
   .order-item-details p,
