--- a/tableorder/src/components/Modal/OrderDetails/OrderDetailsStyle.css
+++ b/tableorder/src/components/Modal/OrderDetails/OrderDetailsStyle.css
@@ -23,7 +23,8 @@
   display: flex;
   flex-direction: column;
   border-radius: 0.25rem;
-  overflow: hidden;
+  overflow-y: auto;
+  min-height: 300px;
 }
 .details-title {
   flex: 0 0 64px;
@@ -46,6 +47,8 @@
   margin-bottom: 0.25rem;
   background-color: #fff;
   overflow: auto;
+  /**/
+  min-height: 300px;
 }
 
 .details-summary {
@@ -108,6 +111,7 @@
     max-width: 800px;
     max-height: calc(100% - 90px);
   }
+
   .details-title {
     flex: 0 0 60px;
   }
@@ -146,7 +150,6 @@
     flex: 0 0 62px;
   }
   .details-title h2 {
-    /* margin-left: 1.25rem; */
     margin-left: 0.75rem;
     font-size: 1.45rem;
   }
@@ -199,7 +202,6 @@
     /**/
     /* max-width: 500px; */
     /* max-height: 700px; */
-
     max-width: 70vw;
     max-height: 80vh;
   }
