--- a/tableorder/src/components/Navbar/NavbarStyle.css
+++ b/tableorder/src/components/Navbar/NavbarStyle.css
@@ -1,14 +1,12 @@
 .nav {
   display: flex;
   padding: 0.25rem;
-  /* border: 1px solid red; */
 }
 .nav-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
   margin: 0 0.5rem;
-  /* border: 1px solid black; */
 }
 .nav-center {
   display: flex;
@@ -22,17 +20,15 @@
   color: #fff;
 }
 .nav-number-info {
-  margin-right: 1.25rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  /* background-color: darkorange; */
-  background-color: #fff;
-  border-bottom-left-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* color: #000; */
+  margin-right: 1.25rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  background-color: #fff;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
   color: #000;
   font-weight: bold;
 }
@@ -52,11 +48,9 @@
     flex: 0 0 90px;
     padding: 0;
     margin: 0.25rem 0.4rem;
-    /* margin-bottom: 0.25rem; */
-    /* border: 3px solid red; */
   }
   .nav-container {
-    margin: 0.35rem 0;
+    /* margin: 0.35rem 0; */
     margin: 0;
     padding: 0;
     justify-content: center;
@@ -66,8 +60,8 @@
     margin-left: 0;
   }
   .nav-center h2 {
-    font-size: 1.8rem;
     padding: 0.15rem;
+    font-size: 1.8rem;
   }
   .nav-number-info {
     position: absolute;
@@ -91,7 +85,7 @@
     margin: 0.25rem 0.5rem;
   }
   .nav-container {
-    margin: 0.5rem 0;
+    /* margin: 0.5rem 0; */
     margin: 0;
     padding: 0;
     justify-content: center;
@@ -101,8 +95,8 @@
     margin-left: 0;
   }
   .nav-center h2 {
-    font-size: 1.9rem;
     padding: 0.15rem;
+    font-size: 1.9rem;
   }
   .nav-number-info {
     position: absolute;
@@ -121,12 +115,12 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .nav {
-    /* padding: 0.25rem 0; */
-    padding: 0.25rem;
+    padding: 0.25rem 0.15rem;
   }
   .nav-container {
-    margin: 0 0.5rem;
-    margin: 0 0.25rem;
+    /* margin: 0 0.5rem; */
+    /* margin: 0 0.25rem; */
+    margin: 0;
   }
   .nav-center {
     margin-left: 1.25rem;
@@ -150,11 +144,12 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .nav {
-    padding: 0.25rem;
+    /* padding: 0.25rem; */
+    padding: 0.25rem 0.175rem;
   }
   .nav-container {
-    /* margin: 0 0.6rem; */
-    margin: 0 0.3rem;
+    /* margin: 0 0.3rem; */
+    margin: 0;
   }
   .nav-center {
     margin-left: 1.5rem;
@@ -168,8 +163,8 @@
     padding: 0.75rem;
   }
   .nav-number-info .icon {
-    font-size: 1.2rem;
     margin-right: 8px;
+    font-size: 1.2rem;
   }
   .nav-number-table {
     font-size: 1.2rem;
@@ -177,13 +172,17 @@
 }
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
   .nav {
-    padding: 0.25rem;
+    /* padding: 0.25rem; */
+    /**/
+    padding: 0.25rem 0.2rem;
   }
 
   .nav-container {
-    margin: 0 0.7rem;
+    /* margin: 0 0.7rem; */
+    /* margin: 0; */
+    /* margin: 0 0.35rem; */
+    /**/
     margin: 0;
-    margin: 0 0.35rem;
   }
   .nav-center {
     margin-left: 2rem;
@@ -197,8 +196,8 @@
     padding: 1rem;
   }
   .nav-number-info .icon {
-    font-size: 1.3rem;
     margin-right: 8px;
+    font-size: 1.3rem;
   }
   .nav-number-table {
     font-size: 1.3rem;
@@ -207,13 +206,12 @@
 @media screen and (min-width: 1440px) {
   .nav {
     padding: 0.25rem;
-    /* border: 1px solid red; */
   }
 
   .nav-container {
     /* margin: 0 0.8rem; */
-    margin: 0 0.4rem;
-    /* border: 1px solid red; */
+    /* margin: 0 0.4rem; */
+    margin: 0;
   }
   .nav-center {
     margin-left: 2.1rem;
@@ -227,8 +225,8 @@
     padding: 1.25rem;
   }
   .nav-number-info .icon {
-    font-size: 1.4rem;
     margin-right: 8px;
+    font-size: 1.4rem;
   }
   .nav-number-table {
     font-size: 1.4rem;
