--- a/tableorder/src/components/Modal/ModalItems/ModalItemStyle.css
+++ b/tableorder/src/components/Modal/ModalItems/ModalItemStyle.css
@@ -30,6 +30,7 @@
   /**/
   overflow-y: auto;
   min-height: 500px;
+  border: 2px solid red;
 }
 .modal-content h2 {
   flex: 0 0 64px;
@@ -146,7 +147,6 @@
     height: 100%;
     transform: translateY(90px);
     max-height: calc(100% - 90px);
-
     min-height: 500px;
   }
   .modal-content h2 {
@@ -173,6 +173,7 @@
     /* max-height: 700px; */
     max-width: 70vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .modal-content h2 {
     flex: 0 0 64px;
@@ -199,6 +200,7 @@
     /* max-height: 700px; */
     max-width: 70vw;
     max-height: 80vh;
+    min-height: 650px;
   }
   .modal-content h2 {
     flex: 0 0 66px;
@@ -223,6 +225,7 @@
     /* max-height: 800px; */
     max-width: 60vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .modal-content h2 {
     flex: 0 0 68px;
@@ -246,6 +249,7 @@
     /* max-height: 800px; */
     max-width: 60vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .modal-content h2 {
     flex: 0 0 70px;
