--- a/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
+++ b/tableorder/src/components/Modal/OrderComplete/OrderCompleteStyle.css
@@ -140,6 +140,7 @@
     transform: translateY(90px);
     max-width: 800px;
     max-height: calc(100% - 90px);
+    min-height: 500px;
   }
   .order-title {
     flex: 0 0 60px;
@@ -191,6 +192,7 @@
     transform: translateY(90px);
     max-width: 800px;
     max-height: calc(100% - 90px);
+    min-height: 500px;
   }
   .order-title {
     flex: 0 0 62px;
@@ -242,6 +244,7 @@
     /* max-height: 80vh; */
     max-width: 70vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .order-title {
     flex: 0 0 64px;
@@ -288,6 +291,7 @@
     /**/
     max-width: 70vw;
     max-height: 80vh;
+    min-height: 650px;
   }
   .order-title {
     flex: 0 0 66px;
@@ -334,6 +338,7 @@
     /**/
     max-width: 60vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .order-title {
     flex: 0 0 68px;
@@ -381,6 +386,7 @@
     /**/
     max-width: 60vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .order-title {
     flex: 0 0 70px;
