--- a/tableorder/src/components/Modal/OrderDetails/OrderDetailsStyle.css
+++ b/tableorder/src/components/Modal/OrderDetails/OrderDetailsStyle.css
@@ -110,6 +110,7 @@
     transform: translateY(90px);
     max-width: 800px;
     max-height: calc(100% - 90px);
+    min-height: 500px;
   }
 
   .details-title {
@@ -145,6 +146,7 @@
     transform: translateY(90px);
     max-width: 800px;
     max-height: calc(100% - 90px);
+    min-height: 500px;
   }
   .details-title {
     flex: 0 0 62px;
@@ -174,6 +176,7 @@
     /* max-height: 700px; */
     max-width: 70vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .details-title {
     flex: 0 0 64px;
@@ -204,6 +207,7 @@
     /* max-height: 700px; */
     max-width: 70vw;
     max-height: 80vh;
+    min-height: 650px;
   }
   .details-title {
     flex: 0 0 66px;
@@ -233,6 +237,7 @@
     /* max-height: 800px; */
     max-width: 60vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .details-title {
     flex: 0 0 68px;
@@ -262,6 +267,7 @@
     /* max-height: 800px; */
     max-width: 60vw;
     max-height: 80vh;
+    min-height: 550px;
   }
   .details-title {
     flex: 0 0 70px;
