--- a/tableorder/src/index.css
+++ b/tableorder/src/index.css
@@ -61,6 +61,9 @@ footer {
 }
 
 @media screen and (max-width: 479px) {
+  .main-container {
+    min-height: 500px;
+  }
   .content-wrapper {
     display: flex;
     flex-direction: column;
@@ -80,6 +83,9 @@ footer {
   }
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
+  .main-container {
+    min-height: 500px;
+  }
   .content-wrapper {
     display: flex;
     flex-direction: column;
@@ -100,6 +106,9 @@ footer {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  .main-container {
+    min-height: 700px;
+  }
   .content-wrapper {
     grid-template-columns: 1fr 3fr;
     /* grid-template-rows: 80px minmax(200px, 1fr) 60px; */
@@ -109,6 +118,9 @@ footer {
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .main-container {
+    min-height: 800px;
+  }
   .content-wrapper {
     grid-template-columns: 1.2fr 4fr;
     grid-template-rows: 90px 1fr 65px;
@@ -117,6 +129,9 @@ footer {
   }
 }
 @media screen and (min-width: 1280px) and (max-width: 1439px) {
+  .main-container {
+    min-height: 700px;
+  }
   .content-wrapper {
     grid-template-columns: 1.2fr 4fr;
     grid-template-rows: 100px 1fr 70px;
@@ -125,6 +140,9 @@ footer {
   }
 }
 @media screen and (min-width: 1440px) {
+  .main-container {
+    min-height: 700px;
+  }
   .content-wrapper {
     grid-template-columns: 1.4fr 5fr;
     grid-template-rows: 110px 1fr 75px;
